--- a/friends/src/App.css
+++ b/friends/src/App.css
@@ -35,6 +35,7 @@ ul {
   display: flex;
   margin: 0 auto;
   justify-content: flex-end;
+  
 }
 
 li {
@@ -48,3 +49,58 @@ li:hover {
   border: 1px solid #624294;
 
 }
+.forme{
+  background-color:rgb(179, 179, 179);
+  width:50%;
+  margin:0 auto;
+  margin-top:100px;
+  padding:40px;
+  border-radius:10px;
+  border:4px solid black;
+  
+
+}
+.forme h1{
+  color:red;
+  background-color:black;
+}
+button{
+  background-color:green;
+  padding:5px;
+  width:10%;
+  margin-top:20px;
+  border-radius:10px;
+  color:white;
+  border:2px solid;
+}
+button:hover{
+  background-color:red;
+  color:white;
+}
+input{
+  width:50%;
+}
+.here{
+  background-color:rgb(179, 179, 179);
+  width:50%;
+  margin:0 auto;
+  margin-top:30px;
+  padding:40px;
+  border-radius:10px;
+  border:4px solid black;
+  
+}
+.here2 h1{
+color:rgb(221, 29, 221);
+}
+.nav{
+  background-color:rgb(20, 211, 211);
+  color:white;
+}
+.fr{
+background-color:black;
+color:white;
+width:50%;
+margin:0 auto;
+border-radius:10px;
+padding:20px;}
